# ghc-events-sqlite

./: LICENSE  README.md  ghc-events-sqlite.cabal  stack.yaml
src/: Main.hs
src/GHC/RTS/Events/: SQLite.hs
src/GHC/RTS/Events/SQLite/: Index.hs  Query.hs
