name:                ghc-events-sqlite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sighingnow/ghc-events-sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Tao He
maintainer:          sighingnow@gmail.com
copyright:           2019 Tao He
category:            Development, Profiling
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ghc-events-sqlite
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc-events
                     , optparse-applicative
                     , sqlite-simple
                     , text
